<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:longClickable="true"
    android:layout_margin="5dp"


    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="7"
        android:baselineAligned="false">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="15sp"
            android:textColor="#015950"
            android:id="@+id/row_date_id"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="20sp"
            android:textColor="#01030E"
            android:id="@+id/row_desc_id"
            android:maxLines="1"
            android:ellipsize="end"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"

        android:weightSum="2"
        >

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"

            android:text = "@string/plus"
            android:gravity="center"
            android:textSize="35sp"
            android:textColor="#150101"
            android:id="@+id/row_plus_id"
            tools:ignore="NestedWeights" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textSize="25sp"
            android:gravity="end"
            android:id="@+id/row_debit_id"
            android:textColor="#871818"
            android:maxLines="1"
            android:ellipsize="end"
            tools:ignore="NestedWeights" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textSize="25sp"
            android:gravity="end"
            android:id="@+id/row_credit_id"
            android:textColor="#30931F"
            android:maxLines="1"
            android:ellipsize="end"
            />

    </LinearLayout>



    </LinearLayout>



</androidx.cardview.widget.CardView>